# moodtune

./: .cache  .gitignore  Readme.md  app.py  main.py  pyproject.toml  requirements.txt
components/: album_cards.py  mood_timeline.py  radar_chart.py
data/: fer2013_eda.ipynb
data/data/: fer_summary.csv
emotion/: detector.py  model_card.md
notebooks/: vit_finetuning.ipynb
recommender/: emotion_map.py  spotify.py
