[project]
name = "moodtune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "albumentations>=1.3.0",
    "matplotlib>=3.11.0",
    "numpy>=1.26.0",
    "opencv-python>=4.9.0",
    "pandas>=2.1.0",
    "pillow>=10.2.0",
    "plotly>=5.19.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.4.0",
    "seaborn>=0.13.2",
    "spotipy>=2.23.0",
    "streamlit>=1.32.0",
    "torch>=2.1.0",
    "transformers>=4.38.0",
]
